[package]
name = "lite-llm-storage"
version = "0.1.0"
edition = "2021"
description = "Lite LLM storage and memory hierarchy skeleton."
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/lite-llm/lite-llm-storage"
authors = ["Lite LLM Developers <litellm@dust.llc>"]
rust-version = "1.70"

[dependencies]
