[package]
name = "lite-llm-storage"
version = "0.1.0"
edition = "2021"
description = "Lite LLM storage hierarchy: tiered placement, caching, checkpoints, and cloud backends."
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/lite-llm/lite-llm-storage"
authors = ["Lite LLM Developers <litellm@dust.llc>"]
rust-version = "1.70"

[dependencies]
# Async runtime for filesystem and network I/O
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
# Async trait support
async-trait = "0.1"
# S3-compatible cloud storage (AWS SDK)
aws-sdk-s3 = { version = "1", optional = true }
# AWS config for credential resolution
aws-config = { version = "1", optional = true }
# Serialization for checkpoint metadata
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# URL parsing for S3 URIs
url = "2"

[features]
default = []
# Enable cloud storage backends (S3, GCS via S3 API)
cloud-backends = ["aws-sdk-s3", "aws-config"]
